# king-cardgame

./: .gitignore  CODE_OF_CONDUCT.br.md  CODE_OF_CONDUCT.md  CONTRIBUTING.br.md  CONTRIBUTING.md  GEMINI.md  README.br.md  README.md
.github/workflows/: deploy-web.yml  haskell-ci.yml
doc/: README.md  cpp.md  csharp.md  haskell.md  nodejs.md  python.md  rust.md
protocol/: zmq-protocol.md
scripts/: bot_pool.json  bot_stats.json  run_match.sh  science_agent.py
src/cpp/king-client/: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/cpp/king-client/examples/: king_agent.cpp
src/cpp/king-client/include/king/: client.h  types.h
src/cpp/king-client/src/: client.cpp  types.cpp
src/cpp/vulkan-client/: CMakeLists.txt  README.md  vcpkg.json
src/cpp/vulkan-client/shaders/: shader.frag  shader.vert
src/cpp/vulkan-client/src/: Application.cpp  Application.h  BaseGameScene.cpp  BaseGameScene.h  Camera.h  Card.cpp  Card.h  Font.cpp  Font.h  GameState.h  HaskellBridge.cpp  HaskellBridge.h  InGameScene.cpp  InGameScene.h  Logger.cpp  Logger.h  ProcessManager.cpp  ProcessManager.h  RuleSelectionScene.cpp  RuleSelectionScene.h  Scene.h  SceneManager.cpp  SceneManager.h  TitleScene.cpp  TitleScene.h  VulkanRenderer.cpp  VulkanRenderer.h  main.cpp  stb_truetype.cpp
src/csharp/client/: monogame-client.sln
src/haskell/king-game/: Dockerfile  Dockerfile.botpool  king-game.cabal
src/haskell/king-game/app/: BotPoolMain.hs  ClientMain.hs  ServerMain.hs
src/haskell/king-game/src/: BaseClient.hs  ClientFFI.hs  KingAgent.hs  KingClient.hs  ProductionEnv.hs  ServerLogic.hs
src/haskell/king-game/test/: Spec.hs
src/nodejs/client/: Dockerfile  app.js  package-lock.json  package.json
src/nodejs/web-client/: astro.config.mjs  package-lock.json  package.json
src/nodejs/web-client/.astro/: settings.json
src/nodejs/web-client/public/: cards.css  cards.js  king.css  king.js
src/nodejs/web-client/src/components/: GameBox.astro  Landing.astro
src/nodejs/web-client/src/i18n/: ui.ts
src/nodejs/web-client/src/layouts/: Layout.astro
src/nodejs/web-client/src/pages/: clients.astro  index.astro  play.astro  rules.astro
src/nodejs/web-client/src/pages/en/: clients.astro  index.astro  play.astro  rules.astro
src/python/bot/: random_bot.py
src/python/client/: human.py
src/python/server/: kingdb.py  loadtest.py  server.py
